* 2007-08-30 - francisco.laguna@open-xchange.com

 - Bugfix #9159: explicitely initializing infostore document metadat
   with filesize 0 for mail attachments.

* 2007-08-30 - thorben.betten@open-xchange.com

 - Bugfix #7658: Fixed i18n call for read acknowledge text

* 2007-08-30 - marcus.klein@open-xchange.com

 - Bugfix #9135: Fixed NullPointerException due to coding problem.

* 2007-08-28 - francisco.laguna@open-xchange.com

 - Fixed Bug #9109, Support for DropBox scenario via WebDAV. A DropBox
   is a folder in which some user may only create objects
   (not read, update or delete). This works also via WebDAV Infostore now.
 - Contacts expect a display name so changed CSV Importer to supply one
   as needed.

* 2007-08-28 - ben.pahne@open-xchange.com

 - Fixed Bug #9110, Display name must be unique
 - Fixed Bug #8731, list request for a nonexistent object returns an
    empty array
 - Fixed Bug #9050, Moving private taged contacts into a public folder

* 2007-08-28 - marcus.klein@open-xchange.com

 - Bugfix #6502: Changed exception if a reminder is not found.
 - Removed deprecated methods from tasks.

* 2007-08-27 - francisco.laguna@open-xchange.com

 - Bugfix #7732: Pass the error message from the Versit Converter on to
   the caller in the ImportResult.
 - Bugfix #7735: Support for RRULE last "whatever" of month "whatever"

* 2007-08-24 - thorben.betten@open-xchange.com

 - Bugfix #6274: Using requested error message if IMAP login fails in any
   case

* 2007-08-24 - martin.kauss@open-xchange.com

 - Fixed bug #9089. It was possible to set a private flag in a public folder.
   This has been fixed.

* 2007-08-23 - marcus.klein@open-xchange.com

 - Bugfix #8903: Added check for create permissions on destination folder if
   tasks are moved.
 - Bugfix #9013: Added the alarm attribute as possible list attribute.
 - Bugfix #9045: Fixed html page in TestServlet.

* 2007-08-23 - thorben.betten@open-xchange.com
